--- a/yahtzee/yahtzee.opam
+++ b/yahtzee/yahtzee.opam
@@ -12,6 +12,7 @@ bug-reports: "https://github.com/username/reponame/issues"
 depends: [
   "ocaml"
   "dune" {>= "3.10"}
+  "curses"
   "odoc" {with-doc}
 ]
 build: [
