--- a/utils/dune-project
+++ b/utils/dune-project
@@ -19,7 +19,7 @@
  (name utils)
  (synopsis "A short synopsis")
  (description "A longer description")
- (depends ocaml dune)
+ (depends ocaml dune curses)
  (tags
   (topics "to describe" your project)))
 
